# LemonGirls

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Character.cpp  Character.h  CharacterManager.cpp  CharacterManager.h  Chat.cpp  Chat.h  ChatManager.cpp  ChatManager.h  Gender.h  Memory.cpp  Memory.h  Message.h  OllamaClient.cpp  OllamaClient.h
test_data/: chat.json
tests/: CharacterManagerTest.cpp  CharacterTest.cpp  ChatTest.cpp  MemoryTest.cpp
